tests/sqlcmd/baselines/errors/stackoverflow.errbaseline
Encountered stack overflow error. Try reducing the number of predicate expressions in the query.
